vertical align show-items font, fixed xs view pagination layout

--- a/zanata-frontend/src/frontend/app/styles/style.less
+++ b/zanata-frontend/src/frontend/app/styles/style.less
@@ -200,6 +200,7 @@
 
   .show-items span {
     margin-right:10px;
+    padding-top: 0.5em;
   }
     .dropdown {
       margin-top: 10px;
